--- a/karu-client/app/src/main/res/layout/activity_main.xml
+++ b/karu-client/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     tools:context="mrcv.karu.MainActivity">
 
-    <!--todo: change the handler into fragments-->
-    <Button android:id="@+id/btn_probar"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:text="DO IT!"
-        android:onClick="btnProbarClicked"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+    <!--todo: change click handler into fragments-->
 
-</android.support.constraint.ConstraintLayout>
+    <Button android:id="@+id/btnVolumeDown"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:onClick="buttonClicked"
+        android:text="🔉" />
+    <Button android:id="@+id/btnPrevious"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:onClick="buttonClicked"
+        android:text="⏮"/>
+    <Button android:id="@+id/btnPlayPause"
+        android:layout_weight="2"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:text="⏯"
+        android:onClick="buttonClicked" />
+    <Button android:id="@+id/btnNext"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:onClick="buttonClicked"
+        android:text="⏭" />
+    <Button android:id="@+id/btnVolumeUp"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:onClick="buttonClicked"
+        android:text="🔊" />
+
+</LinearLayout>
